<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_razones_trig">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/btn_op_3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.677"
        tools:ignore="MissingConstraints">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:isScrollContainer="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="219dp"
                        android:layout_height="215dp"
                        app:srcCompat="@drawable/triangulo_rectangulo" />

                    <LinearLayout
                        android:layout_width="123dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:text="@string/txt_formulas"
                            android:textColor="@color/color_primary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/formula_hipotenusa"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/formula_seno"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/formula_coseno"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/formula_tangente"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/formula_cotangente"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/formula_secante"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/formula_cosecante"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:layout_margin="20dp"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="265dp"
                    android:layout_height="44dp"></Spinner>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txt_tringulorectangulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="Angulo"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/valorLadoA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="@string/lado_a"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/valorLadoB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="@string/lado_b"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/valorLadoC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="@string/lado_c"
                        android:inputType="numberDecimal" />
                </LinearLayout>

            </TableRow>


        </TableLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_trinagulo_rectangulo_calcular"
                android:layout_width="127dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/color_primary"
                android:fontFamily="casual"
                android:onClick="calcular"
                android:text="@string/btn_calcular"
                android:textColor="@color/white"
                app:cornerRadius="30dp" />

            <Button
                android:id="@+id/btn_triangulo_rectangulo_limpiar"
                android:layout_width="54dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/color_primary"
                android:onClick="Limpiar"
                android:textColor="@color/white"
                android:textSize="5dp"
                app:cornerRadius="10dp"
                app:icon="@drawable/limpiar"
                app:iconSize="20dp"
                app:iconTint="@color/white" />
        </TableRow>

    </LinearLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:background="@drawable/wave"
        android:rotationX="182"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>