<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity_Opciones">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_opciones" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="251dp"
                    android:layout_height="213dp"
                    app:srcCompat="@drawable/ensenar" />

                <LinearLayout
                    android:layout_width="132dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/close_session"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_cerrar_session" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:text="@string/txt_titulo"
                        android:textColor="#433F3F"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/txt_areaOpciones"
                        android:textColor="#433F3F" />

                    <TextView
                        android:id="@+id/detalle_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_primary"
            android:gravity="center">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_op1"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="350dp"
                    android:layout_height="80dp"
                    android:fontFamily="casual"
                    android:text="@string/btn_op_1"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:iconTint="#FFFFFF"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_op2"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:backgroundTint="@android:color/white"
                    android:fontFamily="casual"
                    android:text="@string/btn_op_2"
                    android:textColor="#3E3B3B"
                    android:textStyle="bold"
                    app:cornerRadius="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_op3"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:fontFamily="casual"
                    android:text="@string/btn_op_3"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_4"

                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:backgroundTint="@android:color/white"
                    android:fontFamily="casual"
                    android:text="@string/btn_op_4"
                    android:textColor="#3E3B3B"
                    android:textStyle="bold"
                    app:cornerRadius="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_5"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:fontFamily="casual"
                    android:text="@string/btn_op_5"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3dp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>