<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context=".Activity_login">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="681dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="293dp"
            app:srcCompat="@drawable/login" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="366dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="294dp"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/txt_titulo"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="casual"
                        android:hint="@string/txt_correo" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:hint="@string/txt_contrasena" />

                </com.google.android.material.textfield.TextInputLayout>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_logearse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/btn_login"
                    android:textStyle="bold"
                    app:backgroundTint="@color/color_primary"
                    app:cornerRadius="30dp" />

                <TextView
                    android:id="@+id/btn_crear_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/btn_crear_cuenta"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>