<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/wave" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:fontFamily="casual"
            android:gravity="clip_horizontal|center"
            android:text="@string/txt_titulo"
            android:textColor="#454444"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="293dp"
            app:srcCompat="@drawable/estudiante" />

        <Button
            android:id="@+id/btn_main"
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/btn_ingreso"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btn_ir_registrar"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/btn_registrarse"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:iconTint="@color/color_primary"
            app:strokeColor="@color/color_primary"
            app:strokeWidth="3dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wave"
            android:rotationX="182" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>